# ege-dev

./: .gitignore  CMakeLists.txt
include/: CMakeLists.txt
include/ege/: CMakeLists.txt  ege_config.hpp.in
include/ege/core/: colors.hpp  logger.hpp
include/ege/ecs/: entity.hpp  i_system.hpp  scene.hpp  system.hpp  system_manager.hpp
include/ege/ecs/components/: UUID.hpp  area_light.hpp  directional_light.hpp  material.hpp  mesh.hpp  point_light.hpp  renderer.hpp  scene_camera.hpp  skybox.hpp  spot_light.hpp  tag.hpp  transform.hpp
include/ege/ecs/systems/: debug.hpp  inspector.hpp  inspector_system.hpp  light_system.hpp  material_system.hpp  render_buffers_system.hpp  render_system.hpp  scene_camera_system.hpp  scene_system.hpp  scene_view_system.hpp
include/ege/events/: app_events.hpp  event.hpp  key_events.hpp  mouse_events.hpp
include/ege/layers/: main_layer.hpp
res/: CMakeLists.txt
res/shaders/material/constant_shader/: frag.glsl  vert.glsl
res/shaders/material/texture_normal_shader/: frag.glsl  vert.glsl
res/shaders/material/texture_shader/: frag.glsl
res/shaders/scene_view_floor/: frag.glsl  vert.glsl
res/shaders/skybox/: vert.glsl
src/: CMakeLists.txt  inspector_system.cpp  light_system.cpp  main.cpp  main_layer.cpp  material_system.cpp  render.cpp  render_buffers_system.cpp  scene.cpp  scene_camera_system.cpp  scene_system.cpp  scene_view_system.cpp  system.cpp  system_manager.cpp
